# nea-website

./: .gitignore  Cargo.toml  README.md  justfile
back_end/: Cargo.toml
back_end/languages/c/: c.dockerfile  project.toml
back_end/languages/cpp/: cpp.dockerfile  project.toml
back_end/languages/cs/: cs.dockerfile  init  project.toml
back_end/languages/java/: java.dockerfile  project.toml
back_end/languages/js/: js.dockerfile  project.toml
back_end/languages/py/: project.toml  py.dockerfile
back_end/languages/rs/: init  project.toml  rs.dockerfile
back_end/languages/sh/: project.toml  sh.dockerfile
back_end/languages/ts/: project.toml
back_end/migrations/: 20250409235713_init.down.sql  20250409235713_init.up.sql
back_end/src/: api.rs  auth.rs  callback.rs  crypto.rs  db.rs  editor_project.rs  error.rs  lang.rs  main.rs  user.rs
back_end/src/api/: comment.rs  follow.rs  mod.rs  profile.rs  project.rs  recs.rs  search.rs  user.rs
back_end/src/auth/: cookies.rs  crypto.rs  middleware.rs  mod.rs  token_cache.rs  token_info.rs
back_end/src/editor/: mod.rs  session.rs  websocket.rs
back_end/src/github/: access_tokens.rs  mod.rs
back_end/src/middlewares/: auth.rs
common/: Cargo.toml
common/src/: hashmap.rs  introsort.rs  lib.rs  rope.rs  vec.rs
docs/: api_endpoints.md
editor/: .gitignore  Cargo.toml  index.html  sw.js
editor/color_schemes/: darcula.yml
editor/src/: _main.rs  app.rs  buffer.rs  color_scheme.rs  explorer.rs  lib.rs  main.rs  pipe_reader.rs  project.rs
editor/src/platform/: mod.rs  web.rs
editor/src/platform/native/: filesystem.rs  mod.rs  pipe_reader.rs  project.rs  runner.rs
editor/src/platform/web/: filesystem.rs  mod.rs  path.rs  project.rs  runner.rs
front_end/: index.html  package.json  vite.config.ts
front_end/src/: Loading.tsx  Navbar.tsx  Profile.tsx  ProjectCard.tsx  ProjectView.tsx  SignIn.tsx  User.tsx  auth.tsx  index.css  main.tsx  markdown.scss  types.ts  utils.ts  vite-env.d.ts
front_end/src/components/: AccentBox.tsx  Bio.tsx  Button.tsx  ContextMenu.tsx  Follow.tsx  InlineUser.tsx  Loading.tsx  Navbar.tsx  ProjectCard.tsx  ProjectView.tsx  Tag.tsx  TextArea.tsx
front_end/src/routes/: About.tsx  Dashboard.tsx  Explore.tsx  Home.tsx  Profile.tsx  ProjectPage.tsx  SignIn.tsx  User.tsx
front_end/src/routes/Explore/: Explore.tsx  FilterMenu.tsx  SearchBar.tsx  SearchPage.tsx
front_end/src/routes/Profile/: Bio.tsx  DeleteModal.tsx  Followers.tsx  Profile.tsx  ProfileFollows.tsx  ProfileHeader.tsx  ProfileInfo.tsx
front_end/src/routes/Project/: Comment.tsx  CommentView.tsx  Comments.tsx  ProjectPage.tsx
front_end/src/routes/Settings/: ProjectSettings.tsx  TagInput.tsx
front_end/src/routes/SignIn/: GithubButton.tsx  SignIn.tsx
front_end/src/routes/User/: Follow.tsx  User.tsx
recsys/: core.py  inference.py  item.py  model.py  recommender.pkl  requirements.txt  train.py  user.py
ws_messages/: Cargo.toml
ws_messages/src/: lib.rs
