[package]
name = "back_end"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"

# web server
axum = { version = "0.8.3", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["cookie", "query"] }
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }

# error handling
anyhow = "1.0.97"
thiserror = "2.0.12"

# database
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
chrono = { version = "0.4.40", features = ["serde"] }

# http client
reqwest = { version = "0.12.15", features = ["json", "stream"] }
bytes = "1.10.1"
futures-util = "0.3.31"

# logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# env vars
dotenv = "0.15.0"

# serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"

# encryption
aes = "0.8.4"
base64 = "0.22.1"
cipher = "0.4.4"
intx = "0.1.0"

# docker
bollard = { version = "0.19.3" }

# websocket
ws_messages = { path = "../ws_messages" }
