[package]
name = "my-ide"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6.3", default-features = false }
crossbeam-channel = "0.5.14"
eframe = { version = "0.31.1", features = ["serde"] }
egui = { version = "0.31.1", features = ["persistence"] }
egui_extras = { version = "0.31.1", default-features = false, features = ["serde", "syntect"] }
env_logger = "0.11.7"
eyre = "0.6.12"
itertools = "0.14.0"
log = "0.4.27"
rfd = "0.15.3"
serde = "1.0.219"
shell-words = "1.1.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[profile.dev.package."*"]
opt-level = 2
