[package]
name = "my-ide"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6.3", default-features = false }
crossbeam-channel = "0.5.14"
eframe = { version = "0.31.1", features = ["serde"] }
egui = { version = "0.31.1", features = ["persistence"] }
# you will probably either need this for the terminal, or need to base a reference off of it
# (probably no reason to write your own, just use this)
# egui_console = ...
egui_extras = { version = "0.31.1", default-features = false, features = ["serde", "syntect"] }
eyre = "0.6.12"
itertools = "0.14.0"
log = "0.4.27"
rfd = "0.15.3"
serde = "1.0.219"
shell-words = "1.1.0"

thiserror = "2.0.12"
toml = { version = "0.8.20", features = ["parse"], default-features = false }
uuid = { version = "1.16.0", features = ["v4", "serde", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.70", features = ["Location", "UrlSearchParams"] }
gloo-net = "0.6.0"