[package]
name = "ws_messages"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
ecolor = { version = "0.33.3", features = ["serde"] }
eyre = "0.6.12"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_yaml = "0.9.34"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
